--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -65,8 +64,8 @@
     }
 
     #floatingFrame {
-      width: 20%;
-      height: 20%;
+      width: 240px;
+      height: 120px;
       background-color: #ead3ae;
       position: absolute;
       top: 0;
