--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head prefix="og: http://ogp.me/ns/website#" >
   <title>Toulouse 1830</title>
   <meta charset="utf-8" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Toulouse 1830" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://tolosa.makina-corpus.com" />
 
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
 
   <link href='http://fonts.googleapis.com/css?family=Diplomata+SC' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Jacques+Francois' rel='stylesheet' type='text/css'>
-<script src="http://use.edgefonts.net/linden-hill;tangerine.js"></script>
+  <script src="http://use.edgefonts.net/linden-hill;tangerine.js"></script>
 
   <!--[if lte IE 8]>
       <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.3/leaflet.ie.css" />
@@ -160,7 +163,7 @@
     </div>
   </div>
   <span style="font-family: tangerine, sans-serif; font-size:20px;">Par <a href="http://makina-corpus.com/">Makina Corpus</a></span>
-  <span style="font-family: tangerine, sans-serif; font-size:20px; float: right; text-align: right;"><a href="#openModal">Mentions légales</a></span>
+  <span style="font-family: tangerine, sans-serif; font-size:20px; float: right; text-align: right;"><a href="#openModal">Sources</a></span>
 
   <div id="openModal" class="modalDialog">
     <div>
