--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head prefix="og: http://ogp.me/ns/website#" >
+<html xmlns:og="http://ogp.me/ns#">
+<head>
   <title>Toulouse 1830</title>
   <meta charset="utf-8" />
 
