--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta property="og:title" content="Toulouse 1830" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://tolosa.makina-corpus.com" />
+  <meta property="og:image" content="screenshot.png" />
 
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
 
