Add Twitter-related metatags

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html xmlns:og="http://ogp.me/ns#">
+<html lang="fr" xmlns:og="http://ogp.me/ns#">
 <head>
-  <title>Toulouse 1830</title>
+  <title>Toulouse en 1830</title>
   <meta charset="utf-8" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="Toulouse 1830" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Plan de Toulouse tel que la ville était construite en 1830." />
+  <meta property="og:title" content="Toulouse en 1830 | Par Makina Corpus" />
+  <meta property="og:description" content="Plan de Toulouse tel que la ville était construite en 1830. Par Makina Corpus." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://tolosa.makina-corpus.com" />
   <meta property="og:image" content="http://tolosa.makina-corpus.com/screenshot.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@makina_corpus" />
+  <meta name="twitter:creator" content="@fbonifas" />
+  <meta name="twitter:title" content="Toulouse en 1830 | Par Makina Corpus" />
+  <meta name="twitter:description" content="Plan de Toulouse tel que la ville était construite en 1830." />
+  <meta name="twitter:image:src" content="http://tolosa.makina-corpus.com/screenshot.png" />
+  <meta name="twitter:url" content="http://tolosa.makina-corpus.com" />
+
 
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
 
@@ -203,8 +213,8 @@
     map.setView([43.6, 1.44], 16);
 
     // Add Base Layer
-    var caueUrl = 'http://{s}.livembtiles.makina-corpus.net/makina/Toulouse1830/{z}/{x}/{y}.png';
-    L.tileLayer(caueUrl, {minZoom: 15, maxZoom: 20, subDomains: 'abcdefgh'}).addTo(map);
+    var tilesUrl = 'http://{s}.livembtiles.makina-corpus.net/makina/Toulouse1830/{z}/{x}/{y}.png';
+    L.tileLayer(tilesUrl, {minZoom: 15, maxZoom: 20, subDomains: 'abcdefgh'}).addTo(map);
   </script>
  </body>
 </html>
