--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="twitter:image:src" content="http://tolosa.makina-corpus.com/screenshot.png" />
   <meta name="twitter:url" content="http://tolosa.makina-corpus.com" />
 
-
+  <link rel="shortcut icon" type="image/x-icon" href="http://makina-corpus.com/favicon.ico" />
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
 
   <link href='http://fonts.googleapis.com/css?family=Diplomata+SC' rel='stylesheet' type='text/css'>
