--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
     map.setView([43.6, 1.44], 16);
 
     // Add Base Layer
-    var tilesUrl = 'http://{s}.livembtiles.makina-corpus.net/makina/toulouse1830/{z}/{x}/{y}.png';
+    var tilesUrl = 'http://{s}.tilestream.makina-corpus.net/v2/toulouse1830/{z}/{x}/{y}.png';
     L.tileLayer(tilesUrl, {minZoom: 15, maxZoom: 20, subDomains: 'abcdefgh'}).addTo(map);
 
-    var utfGrid = new L.UtfGrid('http://{s}.livembtiles.makina-corpus.net/makina/toulouse1830/{z}/{x}/{y}.grid.json?callback={cb}', {
+    var utfGrid = new L.UtfGrid('http://{s}.tilestream.makina-corpus.net/v2/toulouse1830/{z}/{x}/{y}.grid.json?callback={cb}', {
       maxZoom: 20});
     utfGrid.on('mouseover', function (e) {
       var content = '';
