CHG: Changing Title

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr" xmlns:og="http://ogp.me/ns#">
 <head>
-  <title>Toulouse en 1830</title>
+  <title>Carte de Toulouse en 1830</title>
   <meta charset="utf-8" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Plan de Toulouse tel que la ville était construite en 1830." />
-  <meta property="og:title" content="Toulouse en 1830 | Par Makina Corpus" />
+  <meta property="og:title" content="Carte de Toulouse en 1830 | Par Makina Corpus" />
   <meta property="og:description" content="Plan de Toulouse tel que la ville était construite en 1830. Par Makina Corpus." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://tolosa.makina-corpus.com" />
