--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" xmlns:og="http://ogp.me/ns#">
+<html lang="fr" xmlns:og="https://ogp.me/ns#">
 <head>
   <title>Carte de Toulouse en 1830</title>
   <meta charset="utf-8" />
@@ -9,26 +9,22 @@
   <meta property="og:title" content="Carte de Toulouse en 1830 | Par Makina Corpus" />
   <meta property="og:description" content="Plan de Toulouse tel que la ville était construite en 1830. Par Makina Corpus." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://tolosa.makina-corpus.com" />
-  <meta property="og:image" content="http://tolosa.makina-corpus.com/screenshot.png" />
+  <meta property="og:url" content="https://tolosa.makina-corpus.com" />
+  <meta property="og:image" content="https://tolosa.makina-corpus.com/screenshot.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@makina_corpus" />
   <meta name="twitter:creator" content="@fbonifas" />
   <meta name="twitter:title" content="Toulouse en 1830 | Par Makina Corpus" />
   <meta name="twitter:description" content="Plan de Toulouse tel que la ville était construite en 1830." />
-  <meta name="twitter:image:src" content="http://tolosa.makina-corpus.com/screenshot.png" />
-  <meta name="twitter:url" content="http://tolosa.makina-corpus.com" />
+  <meta name="twitter:image:src" content="https://tolosa.makina-corpus.com/screenshot.png" />
+  <meta name="twitter:url" content="https://tolosa.makina-corpus.com" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="http://makina-corpus.com/favicon.ico" />
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+  <link rel="shortcut icon" type="image/x-icon" href="https://makina-corpus.com/favicon.ico" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@0.6.4/dist/leaflet.css" />
 
-  <link href='http://fonts.googleapis.com/css?family=Diplomata+SC' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Jacques+Francois' rel='stylesheet' type='text/css'>
-  <script src="http://use.edgefonts.net/linden-hill;tangerine.js"></script>
-
-  <!--[if lte IE 8]>
-      <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.3/leaflet.ie.css" />
-  <![endif]-->
+  <link href='https://fonts.googleapis.com/css2?family=Diplomata+SC' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css2?family=Jacques+Francois' rel='stylesheet' type='text/css'>
+  <!-- <script src="https://use.edgefonts.net/linden-hill;tangerine.js"></script> -->
 
   <style>
     * {
@@ -192,40 +188,40 @@
       </div>
     </div>
   </div>
-  <span style="font-family: tangerine, sans-serif; font-size:20px;">Par <a href="http://makina-corpus.com/">Makina Corpus</a></span>
+  <span style="font-family: tangerine, sans-serif; font-size:20px;">Par <a href="https://makina-corpus.com/">Makina Corpus</a></span>
   <span style="font-family: tangerine, sans-serif; font-size:20px; float: right; text-align: right;"><a href="#openModal">Sources</a></span>
 
   <div id="openModal" class="modalDialog">
     <div>
       <a href="#close" title="Close" class="close">X</a>
       <h2>Attribution</h2>
-      <p>Données géographiques : <a href="http://data.grandtoulouse.fr/web/guest/les-donnees/-/opendata/card/12534-parcellaire-de-1830"> Open data Toulouse Métropole</a></p>
+      <p>Données géographiques : <a href="https://data.toulouse-metropole.fr/explore/dataset/parcellaire-de-1830/information/"> Open data Toulouse Métropole</a></p>
       <p>Icônes :
         <ul>
-          <li><a href="http://thenounproject.com/noun/cheese/#icon-No590" target="_blank">Cheese</a>  from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/gun/#icon-No1823" target="_blank">Gun</a> designed by <a href="http://thenounproject.com/Simon Child" target="_blank">Simon Child</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/coin/#icon-No20456" target="_blank">Coin</a> designed by <a href="http://thenounproject.com/henryryder" target="_blank">Henry Ryder</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/barber-shop/#icon-No13410" target="_blank">Barber Shop</a> designed by <a href="http://thenounproject.com/alylysh" target="_blank">alylysh</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/ring/#icon-No4437" target="_blank">Ring</a> designed by <a href="http://thenounproject.com/Belcebu" target="_blank">DonBLC 123</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/meat/#icon-No23422" target="_blank">Meat</a> designed by <a href="http://thenounproject.com/christopherjs" target="_blank">Christopher Scott</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/saw/#icon-No1287" target="_blank">Saw</a> designed by <a href="http://thenounproject.com/john.brueggemann" target="_blank">John Brüggemann</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/needle-and-thread/#icon-No17518" target="_blank">Needle and Thread</a> designed by <a href="http://thenounproject.com/Guvnor" target="_blank">Guvnor Co</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/jar/#icon-No3520" target="_blank">Jar</a> designed by <a href="http://thenounproject.com/giulio.bertolotti" target="_blank">Giulio Bertolotti</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/paint-brush/#icon-No4015" target="_blank">Paint Brush</a> designed by <a href="http://thenounproject.com/nilsbyte" target="_blank">Nils</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/shirt/#icon-No3312" target="_blank">Shirt</a> designed by <a href="http://thenounproject.com/fusillomaurizio" target="_blank">Maurizio Fusillo</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/key/#icon-No4010" target="_blank">Key</a> designed by <a href="http://thenounproject.com/indur" target="_blank">Bucky Clarke</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/anvil/#icon-No3891" target="_blank">Anvil</a> designed by <a href="http://thenounproject.com/podrivo" target="_blank">Pedro Ivo Hudson</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/wheelbarrow/#icon-No3704" target="_blank">Wheelbarrow</a> designed by <a href="http://thenounproject.com/Luis" target="_blank">Luis Prado</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/candy/#icon-No3258" target="_blank">Candy</a> designed by <a href="http://thenounproject.com/alxhrt" target="_blank">Alex Hartmann</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/perfume/#icon-No3175" target="_blank">Perfume</a> designed by <a href="http://thenounproject.com/Patch77" target="_blank">Patrick Brentano</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/chair/#icon-No20780" target="_blank">Chair</a> designed by <a href="http://thenounproject.com/franciellycs" target="_blank">Francielly Costantin Senra</a> from The Noun Project</li>
-          <li><a href="http://thenounproject.com/noun/wrench/#icon-No1320" target="_blank">Wrench</a> designed by <a href="http://thenounproject.com/johncaserta" target="_blank">John Caserta</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/cheese/#icon-No590" target="_blank">Cheese</a>  from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/gun/#icon-No1823" target="_blank">Gun</a> designed by <a href="https://thenounproject.com/Simon Child" target="_blank">Simon Child</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/coin/#icon-No20456" target="_blank">Coin</a> designed by <a href="https://thenounproject.com/henryryder" target="_blank">Henry Ryder</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/barber-shop/#icon-No13410" target="_blank">Barber Shop</a> designed by <a href="https://thenounproject.com/alylysh" target="_blank">alylysh</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/ring/#icon-No4437" target="_blank">Ring</a> designed by <a href="https://thenounproject.com/Belcebu" target="_blank">DonBLC 123</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/meat/#icon-No23422" target="_blank">Meat</a> designed by <a href="https://thenounproject.com/christopherjs" target="_blank">Christopher Scott</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/saw/#icon-No1287" target="_blank">Saw</a> designed by <a href="https://thenounproject.com/john.brueggemann" target="_blank">John Brüggemann</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/needle-and-thread/#icon-No17518" target="_blank">Needle and Thread</a> designed by <a href="https://thenounproject.com/Guvnor" target="_blank">Guvnor Co</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/jar/#icon-No3520" target="_blank">Jar</a> designed by <a href="https://thenounproject.com/giulio.bertolotti" target="_blank">Giulio Bertolotti</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/paint-brush/#icon-No4015" target="_blank">Paint Brush</a> designed by <a href="https://thenounproject.com/nilsbyte" target="_blank">Nils</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/shirt/#icon-No3312" target="_blank">Shirt</a> designed by <a href="https://thenounproject.com/fusillomaurizio" target="_blank">Maurizio Fusillo</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/key/#icon-No4010" target="_blank">Key</a> designed by <a href="https://thenounproject.com/indur" target="_blank">Bucky Clarke</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/anvil/#icon-No3891" target="_blank">Anvil</a> designed by <a href="https://thenounproject.com/podrivo" target="_blank">Pedro Ivo Hudson</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/wheelbarrow/#icon-No3704" target="_blank">Wheelbarrow</a> designed by <a href="https://thenounproject.com/Luis" target="_blank">Luis Prado</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/candy/#icon-No3258" target="_blank">Candy</a> designed by <a href="https://thenounproject.com/alxhrt" target="_blank">Alex Hartmann</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/perfume/#icon-No3175" target="_blank">Perfume</a> designed by <a href="https://thenounproject.com/Patch77" target="_blank">Patrick Brentano</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/chair/#icon-No20780" target="_blank">Chair</a> designed by <a href="https://thenounproject.com/franciellycs" target="_blank">Francielly Costantin Senra</a> from The Noun Project</li>
+          <li><a href="https://thenounproject.com/noun/wrench/#icon-No1320" target="_blank">Wrench</a> designed by <a href="https://thenounproject.com/johncaserta" target="_blank">John Caserta</a> from The Noun Project</li>
         </ul>
       </p>
     </div>
   </div>
 
-  <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet@0.6.4/dist/leaflet.js"></script>
   <script src="leaflet.utfgrid.js"></script>
   <script type="text/javascript">
 
@@ -233,10 +229,10 @@
     map.setView([43.6, 1.44], 16);
 
     // Add Base Layer
-    var tilesUrl = 'http://{s}.tilestream.makina-corpus.net/v2/toulouse1830/{z}/{x}/{y}.png';
+    var tilesUrl = 'https://{s}.tilestream.makina-corpus.net/v2/toulouse1830/{z}/{x}/{y}.png';
     L.tileLayer(tilesUrl, {minZoom: 15, maxZoom: 20, subDomains: 'abcdefgh'}).addTo(map);
 
-    var utfGrid = new L.UtfGrid('http://{s}.tilestream.makina-corpus.net/v2/toulouse1830/{z}/{x}/{y}.grid.json?callback={cb}', {
+    var utfGrid = new L.UtfGrid('https://{s}.tilestream.makina-corpus.net/v2/toulouse1830/{z}/{x}/{y}.grid.json?callback={cb}', {
       maxZoom: 20});
     utfGrid.on('mouseover', function (e) {
       var content = '';
@@ -254,7 +250,8 @@
 
     map.addLayer(utfGrid);
   </script>
-  <script>
+
+  <!-- <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -262,6 +259,6 @@
   
     ga('create', 'UA-49209273-1', 'makina-corpus.com');
     ga('send', 'pageview');
-  </script>
+  </script> -->
  </body>
 </html>
